fix : decrease gap image

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -70,7 +70,8 @@ body {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 4px;
+  /* gap: 4px; */
+  gap: 1.8px;
 }
 
 .image__wrapper {
